grading/grader/submissions/all-grades-before-objection/terminal-logs/user6000_grade.txt

user6000
compiling...
src/project/airlinecontainer/Airline.java:259: error: missing return statement
	}
	^
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
running...
input0.txt testing...
Timed out - killing 64160
input1.txt testing...
Timed out - killing 64181
input10.txt testing...
Timed out - killing 64193
input11.txt testing...
Timed out - killing 64211
input12.txt testing...
Timed out - killing 64222
input13.txt testing...
Timed out - killing 64227
input14.txt testing...
Timed out - killing 64235
input15.txt testing...
Timed out - killing 64236
input16.txt testing...
Timed out - killing 64259
input17.txt testing...
Timed out - killing 64262
input18.txt testing...
Timed out - killing 64272
input19.txt testing...
Timed out - killing 64275
input2.txt testing...
Timed out - killing 64277
input20.txt testing...
Timed out - killing 64279
input21.txt testing...
Timed out - killing 64285
input22.txt testing...
Timed out - killing 64290
input23.txt testing...
Timed out - killing 64293
input24.txt testing...
Timed out - killing 64296
input25.txt testing...
Timed out - killing 64299
input26.txt testing...
Timed out - killing 64306
input27.txt testing...
Timed out - killing 64307
input28.txt testing...
Timed out - killing 64323
input29.txt testing...
Timed out - killing 64358
input3.txt testing...
Timed out - killing 64387
input30.txt testing...
Timed out - killing 64409
input31.txt testing...
Timed out - killing 64411
input32.txt testing...
Timed out - killing 64419
input33.txt testing...
Timed out - killing 64420
input34.txt testing...
Timed out - killing 64431
input4.txt testing...
Timed out - killing 64469
input5.txt testing...
Timed out - killing 64471
input6.txt testing...
Timed out - killing 64474
input7.txt testing...
Timed out - killing 64477
input8.txt testing...
Timed out - killing 64478
input9.txt testing...
Timed out - killing 64480

